apps/cmak/50.Service.yml
kind: Service
apiVersion: v1
metadata:
  name: cmak
  namespace: cmak
  labels:
    app.kubernetes.io/component: cmak
    app.kubernetes.io/name: cmak
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: cmak
  selector:
    app.kubernetes.io/component: cmak
    app.kubernetes.io/name: cmak
  sessionAffinity: None
  type: ClusterIP
