apps/cmak/60.Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cmak-ingress
  namespace: cmak
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: nginx-ingress-microk8s
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    prometheus.io/port: '9113'
    spec.ingressClassName: public
spec:
  rules:
  - host: cmak.prod.k8s.home
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cmak
              port:
                number: 80
